# packaging_tutorial

./: README.md  setup.cfg
src/Vikon1c/: Vikon1c.py
src/Vikon1c/Abiturients/: Abiturients.py
src/Vikon1c/Application/: Application.py
tests/: 1
