[metadata]
name = VIKONfrom1C-faridlesosibirsk
version = 0.0.1
author = faridlesosibirsk
author_email = farid.lfsibgtu.ru@mail.ru
description = A small package to onvert excel from 1C to VIKON
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faridlesosibirsk/1CtoVicon
project_urls =
    Bug Tracker = https://github.com/faridlesosibirsk/1CtoVicon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src